syntax = "proto3";

option go_package = "github.com/poommu-sp/public-exim-grpc-protocol/samantra/common;common";

package samantra.common;

message Empty {}

message NullFloat64 {
  double Float64 = 1;
  bool Valid = 2;
}

message NullInt64 {
  int64 Int64 = 1;
  bool Valid = 2;
}

message NullString {
  string String = 1;
  bool Valid = 2;
}

message Unit {
  int64 ID = 1;
  string ShortName = 2;
  string Name = 3;
  int64 Type = 4;
}

message Amount {
  NullFloat64 Value = 1;
  Unit Unit = 2;
}

message PlantQuantity {
  int64 ID = 1;
  Amount Quantity = 2;
  float QuotaWeight = 3;
  float QuotaQty = 4;    
}

message PlantQuantities {
  repeated PlantQuantity PlantQuantities = 1;
}

// a stand-in, not used but exist only for go library to be able to detect this file
service EmptyStandIn {
  rpc EmptyFunction (Empty) returns (Empty) {}
}
